--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+/* Globais */
+
+@font-face {
+  font-family: 'Noto Color Emoji';
+  src: url(https://gitcdn.xyz/repo/googlefonts/noto-emoji/master/fonts/NotoColorEmoji.ttf);
+}
+
 body {
   background: #e5e5e5;
   color: #25282b;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+}
+
+body.hide-scroll {
+  overflow: hidden;
 }
 
 #emoji {
@@ -27,6 +38,30 @@ p,
   letter-spacing: 0.1px;
 }
 
+.button {
+  background: #ff5e84;
+  color: white;
+
+  width: 150px;
+  height: 40px;
+
+  font-size: 14px;
+  font-weight: bold;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 8px;
+
+  box-shadow: 0px 8px 16px rgba(255, 0, 92, 0.16);
+}
+
+.button:hover {
+  text-decoration: none;
+  background: #0984e3;
+}
+
 #container {
   width: 90%;
   max-width: 980px;
@@ -37,7 +72,7 @@ p,
 
 #intro {
   width: 300px;
-  margin-right: 20px;
+  margin-right: 64px;
 }
 
 main {
@@ -64,22 +99,6 @@ button {
 
 button:hover {
   text-decoration: underline;
-}
-
-button.fat {
-  background: #ff5e84;
-  color: white;
-
-  width: 150px;
-  height: 40px;
-
-  border-radius: 6px;
-
-  box-shadow: 0px 8px 16px rgba(255, 0, 92, 0.16);
-}
-
-button.fat:hover {
-  text-decoration: none;
 }
 
 footer {
@@ -130,15 +149,20 @@ footer a {
   background: #ff5e84;
   position: absolute;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  bottom: 0;
+  right: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   transition: 400ms;
 }
 
+#modal.add-scroll {
+  overflow: auto;
+}
+
 #modal .content {
-  margin-top: 128px;
+  margin-top: 5%;
 
   color: white;
 }
@@ -152,7 +176,7 @@ footer a {
   width: 80%;
   max-width: 800px;
 
-  margin: 0 auto;
+  margin: 0 auto 15%;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -225,4 +249,66 @@ form button:hover {
 #modal.hide {
   opacity: 0;
   visibility: hidden;
+}
+
+/* ideia.html */
+#page-ideas #container {
+  display: block;
+}
+
+#page-ideas header {
+  display: flex;
+  justify-content: space-between;
+}
+
+#page-ideas nav {
+  display: flex;
+  align-items: center;
+}
+
+#page-ideas nav li {
+  list-style: none;
+  margin-right: 16px;
+}
+
+#page-ideas nav li a {
+  color: #25282b;
+}
+
+#page-ideas nav li a.button {
+  color: white;
+}
+
+#page-ideas nav li:last-child {
+  margin: 0;
+}
+
+section#title {
+  text-align: center;
+}
+
+section#title p {
+  opacity: 0.7;
+  margin: 0;
+}
+
+section#title h1 {
+  margin: 0;
+  font-size: 28px;
+}
+
+section#ideas {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+section#ideas .idea {
+  margin: 0;
+}
+
+section#title,
+section#ideas,
+footer {
+  margin-top: 64px;
 }
