--- a/public/style.css
+++ b/public/style.css
@@ -147,7 +147,7 @@ footer a {
 /* Modal */
 #modal {
   background: #ff5e84;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
